Listo los stylos de movil

--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,32 @@ main{
     color: var(--cyan);
     cursor: pointer;
 }
+@media screen  and (min-width: 270px) and (max-width:600px){
+    main{
+        display: grid;
+        place-items: center;
+    }
+    .container{
+        width: 90%;
+        height: 80vh;
+    }
+    .card{
+        margin-top: 30px;
+    }
+    .card_container-img{
+        margin-bottom: 30px;
+    }
+    .card__description{
+        margin-bottom: 30px;
+    }
+    .description__title {
+        margin-bottom: 30px;
+    }
+    .card__quote{
+        margin-bottom: 30px;
+        padding-bottom: 30px;
+    }
+    .card__author{
+        margin-top: 30px;
+    }
+}
