--- a/css/style.css
+++ b/css/style.css
@@ -152,25 +152,9 @@ main{
     }
     .container{
         width: 90%;
-        height: 80vh;
+        height: auto;
     }
     .card{
-        margin-top: 30px;
-    }
-    .card_container-img{
-        margin-bottom: 30px;
-    }
-    .card__description{
-        margin-bottom: 30px;
-    }
-    .description__title {
-        margin-bottom: 30px;
-    }
-    .card__quote{
-        margin-bottom: 30px;
-        padding-bottom: 30px;
-    }
-    .card__author{
-        margin-top: 30px;
-    }
-}
+        height: auto;
+    }    
+} 
